feat: 🎸 init project

--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@foxone/fennec-dapp": "^0.5.4",
     "@foxone/icons": "^3.0.1-52",
+    "@foxone/pando-ui": "^0.0.2-11",
     "@foxone/uikit": "^3.0.1-58",
-    "@foxone/utils": "^0.2.21",
-    "@nuxtjs/axios": "5.8.0",
+    "@foxone/utils": "^0.2.22",
     "@nuxtjs/dotenv": "^1.4.1",
     "nuxt": "^2.0.0",
     "nuxt-i18n": "^6.4.1",
