--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-ts-template",
+  "name": "pando-wave-web",
   "version": "1.0.1",
   "description": "nuxt template starter",
   "author": "Fox.ONE",
@@ -21,8 +21,8 @@
   },
   "dependencies": {
     "@foxone/fennec-dapp": "^0.5.4",
-    "@foxone/icons": "^3.0.1-52",
-    "@foxone/pando-ui": "^0.0.2-11",
+    "@foxone/icons": "^3.0.1-55",
+    "@foxone/pando-ui": "^0.0.2-12",
     "@foxone/uikit": "^3.0.1-58",
     "@foxone/utils": "^0.2.22",
     "@nuxtjs/dotenv": "^1.4.1",
@@ -68,7 +68,7 @@
     "fork-ts-checker-webpack-plugin": "^5.2.0",
     "nodemon": "^1.18.9",
     "prettier": "^1.16.4",
-    "typescript": "^4.2.4",
+    "typescript": "4.2.4",
     "vuetify-loader": "^1.3.0",
     "webpack": "^4.46.0"
   }
