--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "yarn lint",
     "dev": "nuxt",
+    "dev:prod": "APP_ENV=prod nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
