--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@foxone/fennec-dapp": "^0.5.4",
     "@foxone/icons": "^3.1.3-0",
     "@foxone/pando-ui": "^0.0.2-14",
-    "@foxone/uikit": "^3.1.3",
+    "@foxone/uikit": "^3.1.4-2",
     "@foxone/utils": "^0.2.22",
     "@nuxtjs/dotenv": "^1.4.1",
     "nuxt": "^2.0.0",
