--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "dependencies": {
     "@foxone/fennec-dapp": "^0.5.4",
     "@foxone/icons": "^3.1.3-0",
-    "@foxone/pando-ui": "^0.0.2-14",
+    "@foxone/pando-ui": "^0.0.2-16",
     "@foxone/uikit": "^3.1.4-2",
     "@foxone/utils": "^0.2.22",
     "@nuxtjs/dotenv": "^1.4.1",
+    "front-matter": "^4.0.2",
+    "markdown-it": "^13.0.1",
     "nuxt": "^2.0.0",
     "nuxt-i18n": "^6.4.1",
     "vue": "^2.6.12",
