--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -1,7 +1,7 @@
 name: Build and deploy to develop.
 
 env:
-  AWS_REGION: ap-northeast-1
+  AWS_REGION: us-west-1
   APP_ENV: dev
 
 on:
@@ -34,7 +34,7 @@ jobs:
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: ${{ env.AWS_REGION }}
-          aws-access-key-id: ${{ secrets.GLOBAL_AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.GLOBAL_AWS_ACCESS_KEY_SECRET }}
+          aws-access-key-id: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.DEV_AWS_ACCESS_KEY_SECRET }}
       - run: aws s3 cp --recursive dist ${{ secrets.S3_URL_DEV }} --acl public-read
       - run: aws s3 cp dist/index.html ${{ secrets.S3_URL_DEV }} --cache-control "no-cache" --acl public-read
